--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,11 +2,12 @@ Package: foofactors3
 Title: What the Package Does (One Line, Title Case)
 Version: 0.0.0.9000
 Authors@R: 
-    person(given = "Hadley",
-           family = "Wickham",
+    person(given = "Nayef",
+           family = "Ahmad",
            role = c("aut", "cre"),
-           email = "hadley@rstudio.com")
-Description: What the package does (one paragraph).
-License: What license it uses
+           email = "nayef.ahmad.11@gmail.com")
+Description: Combines factors nicely.
+License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
+RoxygenNote: 7.0.2
