--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: foofactors3
-Title: What the Package Does (One Line, Title Case)
+Title: Combine Factors Nicely
 Version: 0.0.0.9000
 Authors@R: 
     person(given = "Nayef",
